--- a/algebraic-topology/20/f/topology.html
+++ b/algebraic-topology/20/f/topology.html
@@ -2,42 +2,40 @@
 <html>
   <head>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
-    <title>MATH 353 - Fall 2018</title>
+    <title>MATH 354 - Fall 2020</title>
   </head>
   <body>
     <h1> <a href="https://www.dropbox.com/s/is6oh49fqg3b4xe/hw01.tex"></a>MATH
-      353 - Graduate Topology </h1>
-    <div>3:30 pm - 4:50 pm </div>
-    <div> MW Votey 223 </div>
+      354 - Algebraic Topology </h1>
+    <div>MWF 1:10 pm - 2:00 pm</div>
+    <div> <a href="https://uvm-mathematics.zulipchat.com"> zulip </a> </div>
     <div><a href="courseinformation.html">Goals/Prerequisites/Grading</a></div>
     <h3> Homework </h3>
     <div>
       <ol>
         <li><a href="https://www.dropbox.com/s/is6oh49fqg3b4xe/hw01.tex">Homework
-            01</a> (due 9/07/18)<a href="https://www.dropbox.com/s/is6oh49fqg3b4xe/hw01.tex"><br>
+            01</a> (due 9/11/20)<a href="https://www.dropbox.com/s/is6oh49fqg3b4xe/hw01.tex"><br>
           </a></li>
         <li><a href="https://www.dropbox.com/s/zeg5jxab7chxt7j/hw02.tex">Homework
-            02</a> (due 9/21/18)</li>
+            02</a> (due 9/25/20)</li>
         <li><a href="https://www.dropbox.com/s/84v3wo18wwpn6o3/hw03.tex">Homework
-            03 </a> (due 10/5/18) </li>
+            03 </a> (due 10/9/20) </li>
         <li><a href="https://www.dropbox.com/s/7w2un2jvbk65rj8/hw04.tex">Homework
-            04</a> (due 10/19/18) </li>
+            04</a> (due 10/23/20) </li>
         <li><a href="https://www.dropbox.com/s/27kezee3vx4a26l/hw05.tex">Homework
-            05</a> (due 11/02/18)</li>
+            05</a> (due 11/06/20)</li>
         <li><a href="https://www.dropbox.com/s/6wcd0cwum9pk00d/hw06.tex">Homework
-            06</a> (due 11/16/18)</li>
+            06</a> (due 11/20/20)</li>
         <li><a href="https://www.dropbox.com/s/64y12d5js3bmgob/hw07.tex">Homework
-            07</a> (due 11/30/18)</li>
+            07</a> (due 11/27/20)</li>
       </ol>
       <a href="https://www.dropbox.com/sh/0qm1vguemjd2wv0/AABtU_SyRWKIqtnxXorDYL50a">Graphics</a>
-      for tex files.
-        (Solutions to old homework were removed from this page on 7/30/2020)</div>
+      for tex files. <a href="upload.html"> Upload page</a>.
     <h3> References </h3>
     <ul>
       <li> <a href="http://angg.twu.net/MINICATS/awodey__category_theory.pdf">
           Awodey's Category Theory</a></li>
       <li><a href="https://www.youtube.com/channel/UCErLELnXehsJ7ycW4OJgfQQ"><span
-
             style="color: #0000ee;">Harpreet Bedi's YouTube Channel</span></a></li>
       <li><a href="http://www.msri.org/summer_schools/695">Blumberg's MSRI
           Lectures on Algebraic K-Theory</a><span style=" color: #0000ee;"><br>
