Fix return to home button on math251F20.html
Frontend fixes:
On page: https://tdupuy.w3.uvm.edu/algebra-one/20/f/math251F20.html
The return to home button doesn’t work to fix it:
<a href="math251F20.html">
Instead of <a href="../../index.html">

--- a/algebra-one/20/f/math251F20.html
+++ b/algebra-one/20/f/math251F20.html
@@ -1,1 +1,33 @@
-<html>  <head>    <meta http-equiv="content-type" content="text/html; charset=windows-1252">    <title>Math 251--Fall 2020</title>  </head>  <body style="       background-color: #b8cddf; color: black;" vlink="#0000ff"    link="#0000ff">    <font size="5"> </font><font size="5">      <h2 align="center"> <font color="#000000"> Math 251, Section A, Fall 2020        </font><br>        <font color="#000000"> Taylor Dupuy <br>        </font></h2>      <h4 align="center"><font color="#000000">(course designed by David Dummit          modified by Taylor Dupuy for COVID pandemic)<br>        </font></h4>      <font color="#000000"> <br>        <p> </p>        <hr>        <div> <a href="Math251-Syllabus.docx">Syllabus</a> </div>        <div> <a href="homeworkF20.html">Homework</a> </div>        <div> <a href="https://uvm-mathematics.zulipchat.com"> Zulip </a> </div>          <br>        </p>        <p> </p>        <hr>        <p> </p>        <p> </p>        <p> <a href="../../index.html"><img src="http://www.emba.uvm.edu/%7Eddummit/arrow.gif"              alt="go back"></a>          return to homepage </p>      </font></font>  </body></html>
+<html>
+  <head>
+    <meta http-equiv="content-type" content="text/html; charset=windows-1252">
+    <title>Math 251--Fall 2020</title>
+  </head>
+  <body style="       background-color: #b8cddf; color: black;" vlink="#0000ff"
+    link="#0000ff">
+    <font size="5"> </font><font size="5">
+      <h2 align="center"> <font color="#000000"> Math 251, Section A, Fall 2020
+        </font><br>
+        <font color="#000000"> Taylor Dupuy <br>
+        </font></h2>
+      <h4 align="center"><font color="#000000">(course designed by David Dummit
+          modified by Taylor Dupuy for COVID pandemic)<br>
+        </font></h4>
+      <font color="#000000"> <br>
+        <p> </p>
+        <hr>
+        <div> <a href="Math251-Syllabus.docx">Syllabus</a> </div>
+        <div> <a href="homeworkF20.html">Homework</a> </div>
+        <div> <a href="https://uvm-mathematics.zulipchat.com"> Zulip </a> </div>
+          <br>
+        </p>
+        <p> </p>
+        <hr>
+        <p> </p>
+        <p> </p>
+        <p> <a href=""math251F20.html"><img src="http://www.emba.uvm.edu/%7Eddummit/arrow.gif"
+              alt="go back"></a>
+          return to homepage </p>
+      </font></font>
+  </body>
+</html>
