--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-<!DOCTYPE html><html>  <head>    <meta http-equiv="content-type" content="text/html; charset=UTF-8">    <title>Taylor Dupuy's Homepage</title>  </head>  <body>    <ul>      <li> <a href="algebra-one/20/f/main.html">Abstract Algebra 1 - Fall 2020        </a><br>      </li>    </ul>  </body></html>
+<!doctype html>
+<html lang=en>
+<head>
+<meta charset=utf-8>
+<title> index.html </title>
+</head>
+<body>
+<p>This page is intentionally left blank.</p>
+</body>
+</html>
+
