--- a/algebra-one/20/f/math251F20.html
+++ b/algebra-one/20/f/math251F20.html
@@ -19,6 +19,7 @@
         <div> <a href="Math251-Syllabus.docx">Syllabus</a> </div>
         <div> <a href="homeworkF20.html">Homework</a> </div>
         <div> <a href="https://uvm-mathematics.zulipchat.com"> Zulip </a> </div>
+           <div> <a href="dashboard/dashboard.html"> Dashboard </a> </div>
           <br>
         </p>
         <p> </p>
